Completed fix of modal scrolling on small screens (added media queries and max-height styles to modals)

--- a/app/assets/stylesheets/modaleffects.css
+++ b/app/assets/stylesheets/modaleffects.css
@@ -76,15 +76,14 @@ perspective effects (not including the modals and the overlay).
 	border-radius: 3px;
 	margin: 0 auto;
 	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+	overflow-y: scroll;
+	-webkit-overflow-scrolling: touch;
+	max-height: 750px;
 }
 
-@media (max-width: 640px) {
-	.md-content {
-		overflow-y: scroll;
-		-webkit-overflow-scrolling: touch;
-	}
-}
-
+@media (max-width: 640px) and (max-height: 750px){.md-content{ max-height: 700px}}
+@media (max-width: 640px) and (max-height: 700px){.md-content{ max-height: 650px}}
+@media (max-width: 640px) and (max-height: 650px){.md-content{ max-height: 600px}}
 @media (max-width: 640px) and (max-height: 600px){.md-content{ max-height: 550px}}
 @media (max-width: 640px) and (max-height: 550px){.md-content{ max-height: 500px}}
 @media (max-width: 640px) and (max-height: 500px){.md-content{ max-height: 450px}}
